sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/PhoneType.java
package org.example;

public interface PhoneType extends java.io.Serializable {

   public java.lang.String getNumber();

   public void setNumber(java.lang.String value);


}

